# bitwise_invert

./: CMakeLists.txt  README.md
src/: main.cpp
test/: CMakeLists.txt  test.cpp  test_file.cpp  test_stdio.cpp
